# proc-macro-workshop

builder/: Cargo.toml
builder/src/: builder_struct.rs  fields.rs  lib.rs
debug/: Cargo.toml
debug/src/: fields.rs  lib.rs
